# varchiver

./: .env.example  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  DYNAMIC_PARSER_GUI_GUIDE.md  DYNAMIC_PARSER_IMPLEMENTATION.md  DYNAMIC_PARSER_README.md  ENV_SETUP.md  EXPORT_README.md  EXPORT_USAGE_EXAMPLES.md  FIXES_SUMMARY.md  FORMAT_CONVERTER_README.md  MULTI_PROJECT_MERGE_GUIDE.md  PKGBUILD  README.md  SUPABASE_ENHANCEMENT_SUMMARY.md  SUPABASE_ENV_GUIDE.md  SUPAMERGE_README.md  SUPAMERGE_SECURITY.md  WIDGET_EXPORT_QUICKSTART.md  bootstrap.py  build.sh  build_all.sh  clean_csv_status.py  compare_csv_terms.py  demo_new_mode.py  development_full_discovery.json  diagnose_db_connection.py  dynamic_parse.py  example_export_config.yaml  export_config_template.yaml  export_supabase.py  format_convert.py  import_sample_items.py  inventory.db  justfile  launch_dynamic_parser.py  missing_terms_to_migrate.csv  multi_project_merge_workflow.py  (+17 more)
.config/varchiver/: config.json
complete_export_dev/: lxohxewitissdhgzhjtj_data_api_20251030_232348.json  lxohxewitissdhgzhjtj_manifest.json  lxohxewitissdhgzhjtj_schema_api_20251030_232348.json
complete_export_prod/: xlmibzeenudmkqgiyaif_data_api_20251030_232438.json  xlmibzeenudmkqgiyaif_manifest.json  xlmibzeenudmkqgiyaif_schema_api_20251030_232438.json
examples/: real_project_example.yaml  supamerge_example.yaml  widget_export_example.py
src/varchiver-0.3.8/: PKGBUILD  (+1 more)
utils/: git_config_manager.py  git_utils.py  release_manager.py
varchiver/: bootstrap.py  json_approach.md  main.py  main_old.py
widgets/: main_widget.py
(+142 files in other folders)
